Basic sanitizing working

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,8 +3,11 @@ akka {
 }
 
 http {
-  interface = "0.0.0.0"
-  port = 9000
+  host    = "0.0.0.0"
+  host    = ${?HTTP_ADDR}
+  port    = "9000"
+  port    = ${?HTTP_PORT}
+
 }
 
 services {
